--- a/branch_predictors/makefile
+++ b/branch_predictors/makefile
@@ -20,7 +20,18 @@ $(BUILDDIR)/%.o: $(SRCDIR)/%.$(SRCEXT)
 	@echo " $(CC) $(CFLAGS) $(INC) -c -o $@ $<"; $(CC) $(CFLAGS) $(INC) -c -o $@ $<
 
 clean:
-	@echo " Cleaning..."; 
+	@echo " Cleaning...";
 	@echo " $(RM) -r $(BUILDDIR) $(TARGET)"; $(RM) -r $(BUILDDIR) $(TARGET)
+
+dist:
+	@echo " Creating submission tar...";
+	@mkdir tfoxhal1
+	@cp -r include tfoxhal1
+	@cp -r src tfoxhal1
+	@cp makefile tfoxhal1
+	@cp README tfoxhal1
+	@cp -r doc/report.pdf tfoxhal1
+	@tar -czvf tfoxhal1.tar.gz tfoxhal1/
+	@rm -r tfoxhal1
 
 .PHONY: clean
